--- a/assets/css/components/_app.scss
+++ b/assets/css/components/_app.scss
@@ -2,6 +2,10 @@
   padding: 2.5em;
   background: $darkest-color;
   text-align: center;
+
+  h1 {
+    color: $primary-color;
+  }
 }
 
 .app-header-avatar {
