Override article h1 font size
HTML5 defaults h1s inside sectioning elements to be smaller than regular
h1s, this means article h2 has a bigger font size than article h1. This
is fine as you're supposed to either use sectioning elements and h1, or
h1..h6 elements.

The hugo markdown → HTML generator doesn't allow wrapping bits of
content inside section tags and doesn't generate them itself.

The only way to not have odd font sizes therefore is to either
completely change the theme to avoid using sectioning content, or to
just reset the article h1 element to have the same font size as the h1
element, as done here.

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -47,6 +47,12 @@ pre {
   overflow: auto;
 }
 
+// The html5 default of h1s inside articles and section doesn't really work well
+// when markdown doesn't allow use of <section> elements in article content
+article h1 {
+  font-size:2em;
+}
+
 ::selection {
   background: rgba($light-color, .25);
 }
